# csv-agent

./: .gitignore  AGENTS.md  BUG_FIXES_COMPLETED.md  CLAUDE.md  DESIGN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  PHASES_4_5_SUMMARY.md  PLAN.md  PROMPT_OPTIMIZATION_GUIDE.md  QUICKSTART_TRAINING.md  README.md  REFACTOR_ISSUES.md  REFACTOR_PLAN.md  ROADMAP.md  VERbalization_REPORT.md  agent_context.md  changes.md  complex_question_samples.json  config.yaml  config_test.yaml  csv_agent_q.py  current.md  exploration_trace.json  ongoing.md  procedural_50_pass_rate_report.json  procedural_question_samples.json  pyproject.toml  questions.json  questions.jsonl  questions.md  test_200_questions.py  test_check_submitted.py  test_generate_only.py  test_kernel.py  test_pass_rates.py  test_pass_rates_quick.py  test_rich_logger.py  test_submit_debug.py  tool_requests.jsonl  (+2 more)
configs/: optimal_throughput.json
csv/: data.meta.json
docs/: AGENTS_PROGRESS.md  ARCHITECTURE_MULTI_AGENT.md  BUG_INVESTIGATION_REPORT.md  DATA_CAPTURE.md  DEBUG.md  IMPLEMENTATION_SUMMARY.md  PHASE3_SUMMARY.md  QUICKSTART_TRAINING.md  RESEARCH_DIRECTIONS.md  TODO.md  TRAINING_PLAN.md  compositional_generation.md  compositional_program_generator_spec.md  design_single_backbone.md  dev_notes.md  episode_schema.md  research_directions.md  search_space_reduction.md  synthetic_improvements_spec.md
entrypoints/: sft_train.py
episodes/: episodes.jsonl
kaggle/: curated_datasets.json
mock/: data.csv
question/: exploration_trace.json  questions.json  test_question.json
scripts/: __init__.py  analysis_output.md  evaluate_model.py  generate_episodes.py  generate_questions.py  generate_training_data.py  pipeline_profiler.py  profile_throughput.py  push_to_hf.py  question_gen.py  smoke_test.py  smoke_test_hooks.py  train_rl.sh  upload_hf.py
src/: __init__.py  cli.py  conversation.py  data_pipeline.py  environment.py  kernel.py  llm.py  main.py  model.py  prompts.py  rewards.py  rich_logger.py  rich_pipeline.py  synthetic_pipeline.py  teacher.py  terminal_display.py  text_extraction.py  tools.py  types.py
test_fixtures/: mock_episodes.jsonl  mock_episodes_larger.jsonl
tests/: conftest.py  test_analyze_procedural.py  test_artifact_path_resolver.py  test_check_submitted.py  test_cli_entrypoint_contract.py  test_container_pool.py  test_contract_smoke.py  test_dead_code_validator.py  test_episode_contract.py  test_episode_factory.py  test_golden_artifact_regression_gate.py  test_hook_validation.py  test_kernel.py  test_kernel_debug.py  test_kernel_robustness.py  test_llm_local.py  test_manifest.py  test_pipeline_e2e.py  test_program_generator_schema.py  test_programs_smoke.py  test_prompt_optimization.py  test_residual_contract_purge.py  test_rich_logger.py  test_robust_matching.py  test_sandbox_security.py  (+9 more)
training/: pyproject.toml  train_sft.py  validate_model.py
(+264 files in other folders)
