[project]
name = "csv-agent"
version = "0.1.0"
description = "Synthetic DS trajectory dataset for training tabular ML agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "jupyter-client>=8.6.3",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "transformers>=4.48.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
