[project]
name = "csv-agent-qa"
version = "0.1.0"
description = "Your environment description here"
readme = "README.md"
tags = ["placeholder-tag", "train", "eval"]
requires-python = ">=3.13"
dependencies = [
    "datetime>=6.0",
    "docker>=7.1.0",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "jupyter-client>=8.6.3",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.5.0",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",
    "transformers>=4.48.0",
    "verifiers>=0.1.8.post1",
    "datasets>=3.0.0",
    "huggingface-hub>=0.27.0",
    "questionary>=2.0.0",
]

[project.scripts]
csvagent = "src.cli:main"

[project.optional-dependencies]
kaggle = ["kaggle>=1.6.0"]
gui = ["dearpygui>=2.0", "psutil>=5.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-n auto -m 'not live'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "live: marks tests requiring real LLM API (run with '--run-live')",
    "integration: marks tests requiring Docker",
]
