[project]
name = "csv-agent-training"
version = "0.1.0"
description = "SFT training for CSV agent models"
requires-python = ">=3.11"
dependencies = [
    "trl>=0.12.0",
    "peft>=0.13.0",
    "transformers>=4.45.0",
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
]

[project.optional-dependencies]
# For NVIDIA GPUs - adds 4-bit quantization
cuda = ["bitsandbytes>=0.44.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = []  # Scripts-only, nothing to package

# Note: torch is NOT listed here intentionally.
# Install the appropriate torch version for your hardware FIRST:
#
# NVIDIA/CUDA:
#   pip3 install torch torchvision
#
# AMD/ROCm 6.4:
#   pip3 install torch torchvision --index-url https://download.pytorch.org/whl/rocm6.4
#
# Then install this package:
#   uv sync        # base deps (ROCm compatible)
#   uv sync --extra cuda  # adds bitsandbytes for 4-bit quant
